--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "resend": "^4.1.1",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
